# rust-rest-billing

./: .env  Cargo.toml  add_coach.sql  badass-biling.session.sql  test.http
migrations/: 20230326193228_create_students_table.sql  20230326195459_create_coaches_tables.sql  20230326202040_create_lessons_table.sql  20230326203145_create_lesson_students.sql
src/: main.rs
