[package]
name = "rust-rest-billing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json", "bigdecimal"] }
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
